--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,33 @@
-requests
-docx
-flask
-flask-restful==0.3.8
-flask-login==0.5.0
-werkzeug
-PyQt5==5.13.0
-SQLAlchemy==1.3.17
-SQLAlchemy-serializer==1.3.4.2
-pandas==1.1.3
-
+aniso8601==9.0.1
+certifi==2022.6.15
+charset-normalizer==2.1.0
+click==8.1.3
+colorama==0.4.5
+docx==0.2.4
+Flask==2.1.3
+Flask-Login==0.6.1
+Flask-RESTful==0.3.9
+greenlet==1.1.2
+idna==3.3
+importlib-metadata==4.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+lxml==4.9.1
+MarkupSafe==2.1.1
+numpy==1.21.6
+pandas==1.3.5
+Pillow==9.2.0
+PyQt5==5.15.6
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.11.0
+python-dateutil==2.8.2
+python-docx==0.8.11
+pytz==2022.1
+requests==2.28.1
+six==1.16.0
+SQLAlchemy==1.4.39
+SQLAlchemy-serializer==1.4.1
+typing_extensions==4.3.0
+urllib3==1.26.10
+Werkzeug==2.1.2
+zipp==3.8.1
